// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders 1`] = `
<span
  className="sc-kBWXA-d dsAcOd"
  size="xsmall"
>
  Default
</span>
`;

exports[`Badge renders with custom background color 1`] = `
<span
  className="sc-kBWXA-d fodKkx"
  size="xsmall"
>
  Default
</span>
`;

exports[`Badge renders with icons 1`] = `
<div
  className="flex justify-around w-full"
>
  <span
    className="sc-kBWXA-d dsAcOd"
    size="xsmall"
  >
    Default
  </span>
  <span
    className="sc-kBWXA-d dsAcOd"
    size="xsmall"
  >
    Default
  </span>
</div>
`;

exports[`Badge renders with small size 1`] = `
<span
  className="sc-kBWXA-d BqOKi"
  size="small"
>
  Default
</span>
`;
